# spotify-r

./: Cargo.toml  config.toml
src/: main.rs
src/data/: mod.rs
src/spotify/: mod.rs
src/update/: metal_injection.rs  mod.rs
