[package]
name = "spotify-collector"
version = "0.1.0"
authors = ["Ilya Voronin <voroninilya115@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = {version = "0.10.7", features = ["blocking", "json"]}
config = "0.9"
url = "2.1.1"
webbrowser = "0.5.5"
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
